style: All files formatting