@@ -1,7 +1,5 @@
 package com.example.codebase.config;
 
-import java.util.Arrays;
-import java.util.List;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import springfox.documentation.builders.ApiInfoBuilder;
@@ -16,6 +14,9 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
+import java.util.Collections;
+import java.util.List;
+
 @Configuration
 @EnableSwagger2
 public class SwaggerConfig {
@@ -23,20 +24,20 @@ public class SwaggerConfig {
     @Bean
     public Docket api() {
         return new Docket(DocumentationType.OAS_30) // OpenAPI 3.0
-                .apiInfo(swaggerInfo())
-                .select()
-                .apis(RequestHandlerSelectors.any())
-                .paths(PathSelectors.ant("/api/**"))
-                .build()
-                .securityContexts(Arrays.asList(securityContext()))
-                .securitySchemes(Arrays.asList(bearerAuthSecurityScheme()));
+            .apiInfo(swaggerInfo())
+            .select()
+            .apis(RequestHandlerSelectors.any())
+            .paths(PathSelectors.ant("/api/**"))
+            .build()
+            .securityContexts(Collections.singletonList(securityContext()))
+            .securitySchemes(Collections.singletonList(bearerAuthSecurityScheme()));
     }
 
     private ApiInfo swaggerInfo() {
         return new ApiInfoBuilder().title("Codebase API Documentation")
-                .description("Swagger UI 간단 예제입니다.")
-                .description("Google OAuth2.0 url : oauth2/authorization/google")
-                .build();
+            .description("Swagger UI 간단 예제입니다.")
+            .description("Google OAuth2.0 url : oauth2/authorization/google")
+            .build();
     }
 
     private HttpAuthenticationScheme bearerAuthSecurityScheme() {
@@ -45,19 +46,19 @@ public class SwaggerConfig {
 
     private SecurityContext securityContext() {
         return springfox
-                .documentation
-                .spi.service
-                .contexts
-                .SecurityContext
-                .builder()
-                .securityReferences(defaultAuth()).forPaths(PathSelectors.any()).build();
+            .documentation
+            .spi.service
+            .contexts
+            .SecurityContext
+            .builder()
+            .securityReferences(defaultAuth()).forPaths(PathSelectors.any()).build();
     }
 
     private List<SecurityReference> defaultAuth() {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference("JWT 토큰값", authorizationScopes));
+        return List.of(new SecurityReference("JWT 토큰값", authorizationScopes));
     }
 
 }
