@@ -1,47 +1,36 @@
 package com.example.codebase.s3;
 
 import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.model.CannedAccessControlList;
-import com.amazonaws.services.s3.model.DeleteObjectRequest;
-import com.amazonaws.services.s3.model.DeleteObjectsRequest;
-import com.amazonaws.services.s3.model.GetObjectRequest;
-import com.amazonaws.services.s3.model.ObjectMetadata;
-import com.amazonaws.services.s3.model.PutObjectRequest;
-import com.amazonaws.services.s3.model.S3Object;
-import com.amazonaws.services.s3.model.S3ObjectInputStream;
+import com.amazonaws.services.s3.model.*;
 import com.amazonaws.util.IOUtils;
 import com.example.codebase.domain.artwork.entity.ArtworkMedia;
 import com.example.codebase.domain.post.entity.PostMedia;
 import com.example.codebase.util.FileUtil;
+import lombok.Getter;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.*;
+import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import lombok.Getter;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.MediaTypeFactory;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
 @Service
 public class S3Service {
 
+    private final AmazonS3 amazonS3Client;
     @Value("${cloud.aws.s3.bucket}")
     private String bucket;
-
     @Getter
     @Value("${cloud.aws.s3.root-dir}")
     private String dir;
-
-    private final AmazonS3 amazonS3Client;
 
     public S3Service(AmazonS3 amazonS3Client) {
         this.amazonS3Client = amazonS3Client;
@@ -52,7 +41,7 @@ public class S3Service {
         S3ObjectInputStream inputStream = object.getObjectContent();
         byte[] bytes = IOUtils.toByteArray(inputStream);
 
-        String fileName = URLEncoder.encode(storedFileName, "UTF-8").replaceAll("\\+", "%20");
+        String fileName = URLEncoder.encode(storedFileName, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
 
         HttpHeaders httpHeaders = new HttpHeaders();
         httpHeaders.setContentType(MediaTypeFactory.getMediaType(fileName).orElse(MediaType.APPLICATION_OCTET_STREAM));
@@ -85,7 +74,7 @@ public class S3Service {
                 throw new IOException("파일이 손상되었거나 지원하지 않는 확장자 입니다.");
             }
             amazonS3Client.putObject(new PutObjectRequest(bucket, key, multipartFile.getInputStream(), objectMetadata)
-                    .withCannedAcl(CannedAccessControlList.PublicRead));
+                .withCannedAcl(CannedAccessControlList.PublicRead));
         }
         return key;
     }
@@ -97,11 +86,11 @@ public class S3Service {
 
     public void deleteObjects(List<String> urls) {
         List<DeleteObjectsRequest.KeyVersion> keyVersions = urls.stream()
-                .map(DeleteObjectsRequest.KeyVersion::new)
-                .collect(Collectors.toList());
+            .map(DeleteObjectsRequest.KeyVersion::new)
+            .collect(Collectors.toList());
 
         DeleteObjectsRequest deleteObjectRequest = new DeleteObjectsRequest(bucket)
-                .withKeys(keyVersions);
+            .withKeys(keyVersions);
         amazonS3Client.deleteObjects(deleteObjectRequest);
     }
 
@@ -113,15 +102,15 @@ public class S3Service {
 
     public void deleteArtworkMediaS3Objects(List<ArtworkMedia> artworkMedias) {
         List<String> urls = artworkMedias.stream()
-                .map(ArtworkMedia::getMediaUrl)
-                .collect(Collectors.toList());
+            .map(ArtworkMedia::getMediaUrl)
+            .collect(Collectors.toList());
         deleteObjects(urls);
     }
 
     public void deletePostMediaS3Objects(List<PostMedia> medias) {
         List<String> urls = medias.stream()
-                .map(PostMedia::getMediaUrl)
-                .collect(Collectors.toList());
+            .map(PostMedia::getMediaUrl)
+            .collect(Collectors.toList());
         if (urls.size() > 0) {
             deleteObjects(urls);
         }
